# Home_work

./: .coverage  .gitignore  README.md  flake8  main.py  products.json  pyproject.toml
src/: base_product.py  category.py  classes.py  lawngrass.py  product.py  repr_mixin.py  smartphone.py
tests/: conftest.py  test_category.py  test_classes.py  test_integration.py  test_lawngrass.py  test_product.py  test_product_category.py  test_smartphone.py  tets_classes.py
