[project]
name = "home-work-1"
version = "0.1.0"
description = ""
authors = [
    {name = "boyna",email = "boyna1212@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "mock (>=5.2.0,<6.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
